--- a/code/train_quantized/Quantization Full Evaluation.ipynb
+++ b/code/train_quantized/Quantization Full Evaluation.ipynb
@@ -18,155 +18,8 @@
     "import logging\n",
     "from typing import Dict, List, Tuple\n",
     "import numpy as np\n",
-    "import json\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "31109d15-c44f-47d0-b35c-053429306e47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "from typing import Dict, List\n",
-    "\n",
-    "import torch\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "LETTER_INDICES: List[str] = [\"A\", \"B\", \"C\", \"D\"]\n",
-    "\n",
-    "\n",
-    "class Doc:\n",
-    "    def __init__(self, query: str, choices: List[str], gold_index: int):\n",
-    "        self.query = query\n",
-    "        self.choices = choices\n",
-    "        self.gold_index = gold_index\n",
-    "\n",
-    "def mmlu_harness_hf(\n",
-    "    ex, topic: str = \"advanced master-level STEM courses\"\n",
-    ") -> Doc:\n",
-    "    \"\"\"\n",
-    "    Convert a raw example from the HF MMLU JSON into a Doc object\n",
-    "    understood by the evaluator.\n",
-    "    \"\"\"\n",
-    "    question = ex[\"question\"]\n",
-    "    choices = ex[\"choices\"]\n",
-    "    answer = ex[\"answer\"]\n",
-    "    prompt = f\"The following are multiple choice questions about {topic}.\\n\\n\"\n",
-    "    prompt += question + \"\\n\"\n",
-    "    for letter, text in zip(LETTER_INDICES, choices):\n",
-    "        prompt += f\"{letter}. {text}\\n\"\n",
-    "    prompt += \"Answer:\"\n",
-    "    gold_ix = LETTER_INDICES.index(answer)\n",
-    "    # prepend a space before each candidate, as required by the original prompt logic\n",
-    "    return Doc(prompt, [f\" {c}\" for c in LETTER_INDICES], gold_ix)\n",
-    "\n",
-    "@torch.no_grad()\n",
-    "def score_choice(\n",
-    "    model: torch.nn.Module,\n",
-    "    tokenizer,\n",
-    "    device: torch.device,\n",
-    "    prompt: str,\n",
-    "    choice: str,\n",
-    ") -> float:\n",
-    "    \"\"\"\n",
-    "    Log-probability that `model` assigns to `choice` when it is generated\n",
-    "    directly after `prompt`.\n",
-    "    \"\"\"\n",
-    "    # 1) Encode prompt and prompt+choice (no special tokens)\n",
-    "    enc_prompt = tokenizer(\n",
-    "        prompt, return_tensors=\"pt\", add_special_tokens=False\n",
-    "    ).to(device)\n",
-    "    enc_full = tokenizer(\n",
-    "        prompt + choice, return_tensors=\"pt\", add_special_tokens=False\n",
-    "    ).to(device)\n",
-    "\n",
-    "    input_ids = enc_full.input_ids\n",
-    "    attn_mask = enc_full.attention_mask\n",
-    "\n",
-    "    # 2) Forward pass\n",
-    "    logits = model(input_ids=input_ids, attention_mask=attn_mask).logits\n",
-    "    log_probs = torch.log_softmax(logits, dim=-1)\n",
-    "\n",
-    "    # 3) Sum log-probs only for the choice tokens\n",
-    "    prompt_len = enc_prompt.input_ids.size(1)\n",
-    "    total_lp = 0.0\n",
-    "    for i in range(prompt_len, input_ids.size(1)):\n",
-    "        token_id = input_ids[0, i].item()\n",
-    "        total_lp += log_probs[0, i - 1, token_id].item()\n",
-    "\n",
-    "    return total_lp\n",
-    "\n",
-    "def evaluate_mmlu(\n",
-    "    dataset,\n",
-    "    model: torch.nn.Module,\n",
-    "    tokenizer,\n",
-    "    device: torch.device,\n",
-    "    harness_fn,\n",
-    ") -> Dict[str, float]:\n",
-    "\n",
-    "    correct = total = 0\n",
-    "    total_time = 0.0\n",
-    "    total_tokens = 0\n",
-    "    per_example_peaks: List[int] = []\n",
-    "\n",
-    "    for example in tqdm(dataset, desc=\"Evaluating\"):\n",
-    "        if device.type == \"cuda\":\n",
-    "            torch.cuda.reset_peak_memory_stats(device)\n",
-    "\n",
-    "        start = time.perf_counter()\n",
-    "\n",
-    "        doc = harness_fn(example)\n",
-    "\n",
-    "        for choice in doc.choices:\n",
-    "            # same construction we pass to the model\n",
-    "            ids = tokenizer(doc.query + choice,\n",
-    "                            add_special_tokens=False).input_ids\n",
-    "            total_tokens += len(ids)\n",
-    "\n",
-    "        scores = [\n",
-    "            score_choice(model, tokenizer, device, doc.query, c)\n",
-    "            for c in doc.choices\n",
-    "        ]\n",
-    "\n",
-    "        if device.type == \"cuda\":\n",
-    "            torch.cuda.synchronize(device)\n",
-    "\n",
-    "        total_time += time.perf_counter() - start\n",
-    "\n",
-    "        if device.type == \"cuda\":\n",
-    "            per_example_peaks.append(torch.cuda.max_memory_allocated(device))\n",
-    "\n",
-    "        pred = int(torch.argmax(torch.tensor(scores)))\n",
-    "        correct += (pred == doc.gold_index)\n",
-    "        total += 1\n",
-    "\n",
-    "    avg_time      = total_time / total\n",
-    "    tokens_per_s  = total_tokens / total_time\n",
-    "    avg_peak_vram = (\n",
-    "        (sum(per_example_peaks) / len(per_example_peaks)) / 1024**2\n",
-    "        if per_example_peaks else float(\"nan\")\n",
-    "    )\n",
-    "\n",
-    "    return {\n",
-    "        \"accuracy\": correct / total,\n",
-    "        \"avg_time_s\": avg_time,\n",
-    "        \"tokens_per_s\": tokens_per_s,\n",
-    "        \"avg_peak_vram_MB\": avg_peak_vram,\n",
-    "        \"score_acc_over_vram\": 1000 * (correct / total) / avg_peak_vram\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "def display_metric(name, metrics):\n",
-    "    print(\n",
-    "        f\"\\n**{name} Evaluation Results**\\n\"\n",
-    "        f\"- Accuracy              : {metrics['accuracy'] * 100:6.2f} %\\n\"\n",
-    "        f\"- Avg. inference time   : {metrics['avg_time_s'] * 1_000:6.1f} ms\\n\"\n",
-    "        f\"- Throughput (tok/s)    : {metrics['tokens_per_s']:6.1f}\\n\"\n",
-    "        f\"- Avg. peak VRAM        : {metrics['avg_peak_vram_MB']:6.1f} MB\\n\"\n",
-    "        f\"- Score Acc/VRAM        : {metrics['score_acc_over_vram']:6.3f} \\n\"\n",
-    "    )\n"
+    "import json\n",
+    "from evaluation_utils import evaluate_mmlu, mmlu_harness_hf, display_metric"
    ]
   },
   {
