Update Scores and Eval Utils

--- a/code/train_quantized/QAT Evaluation.ipynb
+++ b/code/train_quantized/QAT Evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d22ba715-d2fd-42a5-ba4d-59c8545ed504",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "3bbc3dde-1913-4745-ab55-9322098726ae",
    "metadata": {},
    "outputs": [],
@@ -42,27 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "fd2a43ed-c9a5-405a-bf7a-2e3c2ab61a44",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32mINFO\u001b[0m  ENV: Auto setting PYTORCH_CUDA_ALLOC_CONF='expandable_segments:True' for memory saving.\n",
-      "\u001b[32mINFO\u001b[0m  ENV: Auto setting CUDA_DEVICE_ORDER=PCI_BUS_ID for correctness.          \n",
-      "\u001b[32mINFO\u001b[0m   Kernel: Auto-selection: adding candidate `ExllamaV2QuantLinear`         \n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`loss_type=None` was set in the config but it is unrecognised.Using the default loss: `ForCausalLMLoss`.\n",
       "INFO:accelerate.utils.modeling:We will use 90% of the memory on device 0 for storing the model, and 10% for the buffer to avoid OOM. You can set `max_memory` in to a higher value to use more memory (at your own risk).\n",
-      "Evaluating: 100%|██████████| 1962/1962 [04:50<00:00,  6.77it/s]"
+      "Evaluating: 100%|██████████| 1962/1962 [04:57<00:00,  6.60it/s]"
      ]
     },
     {
@@ -72,8 +61,8 @@
       "\n",
       "**QAT-W4G64 Evaluation Results**\n",
       "- Accuracy              :  45.87 %\n",
-      "- Avg. inference time   :  147.0 ms\n",
-      "- Throughput (tok/s)    : 2838.9\n",
+      "- Avg. inference time   :  150.7 ms\n",
+      "- Throughput (tok/s)    : 2769.6\n",
       "- Avg. peak VRAM        :  792.1 MB\n",
       "- Score Acc/VRAM        :  0.579 \n",
       "\n"
@@ -91,7 +80,7 @@
     "gc.collect()\n",
     "torch.cuda.empty_cache()\n",
     "\n",
-    "repo_id = 'TheS3b/Qwen3-EfficientQAT-w4g64'\n",
+    "repo_id = 'TheS3b/MNLP_M3_quantized_model'\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(repo_id, trust_remote_code=True)\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
@@ -579,9 +568,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mnlp",
+   "display_name": "ta_boss",
    "language": "python",
-   "name": "mnlp"
+   "name": "ta_boss"
   },
   "language_info": {
    "codemirror_mode": {
